[package]
name = "distributed-system"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"

tokio = { version = "1.47.1", features = ["full", "rt-multi-thread"] }
redis = { version = "0.32.4", features = ["aio", "tokio-comp"] }
futures = "0.3.31"
